Update typescript to 4.0, set `skipLibCheck: true` in tsconfig
* Eliminates `duplicate identifier` error with @types/node
  https://stackoverflow.com/questions/57331779/typescript-duplicate-identifier-iteratorresult

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "noEmitOnError": true,
     "newLine": "LF",
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   }
 }
